[gd_scene load_steps=2 format=3 uid="uid://d3htradingui"]

[ext_resource type="Script" path="res://game/scripts/ui/TradingUI.gd" id="1_script"]

[node name="TradingUI" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -100.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 24.0
grow_horizontal = 2
text = "Trade"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 28.0
offset_right = 80.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Add items to trade"
horizontal_alignment = 1

[node name="MyOfferPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_top = 48.0
offset_right = 172.0
offset_bottom = 140.0

[node name="MyLabel" type="Label" parent="Panel/MyOfferPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
text = "My Offer"
horizontal_alignment = 1

[node name="OfferList" type="VBoxContainer" parent="Panel/MyOfferPanel"]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 88.0

[node name="TheirOfferPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
offset_left = 188.0
offset_top = 48.0
offset_right = 352.0
offset_bottom = 140.0

[node name="TheirLabel" type="Label" parent="Panel/TheirOfferPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
text = "Their Offer"
horizontal_alignment = 1

[node name="OfferList" type="VBoxContainer" parent="Panel/TheirOfferPanel"]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 88.0

[node name="AddItemButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -48.0
offset_right = -60.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "Add Item"

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -48.0
offset_right = 40.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="CancelButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -48.0
offset_right = 140.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "Cancel"
